# keaton-cli

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  setup.sh
keaton/: __init__.py  agents.py  auth.py  cli.py  config.py  marketcli.py  splash.py  toolcli.py
keaton/assets/: __init__.py  pixel_me.py
keaton/providers/: __init__.py  anthropic.py  base.py  base44.py  factory.py  gemini.py  lmstudio.py  local.py  ollama.py  openai.py  openrouter.py
keaton/tools/: __init__.py  base.py  docker.py  executor.py  fd.py  ffmpeg.py  git.py  imagemagick.py  jq.py  kubectl.py  mysql.py  node.py  package_manager.py  pandoc.py  postgres.py  python.py  registry.py  ripgrep.py  sqlite.py  ssh.py  terraform.py  ytdlp.py
keaton/tui/: __init__.py  app.py  keys.py  marketplace.py  recent.py  theme.py  updates.py  wave.py  widgets.py
keaton/tui/screens/: agents.py  base.py  chat.py  confirm.py  dashboard.py  help.py  marketplace.py  operations.py  palette.py  projects.py  settings.py  tools.py
scripts/: gen_pixel_art.py
tests/: test_marketcli.py  test_tui.py
