[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keaton-cli"
version = "0.2.0"
description = "An AI operating system for the terminal that orchestrates real developer tools."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Keaton", email = "keatonlf@gmail.com"}]
keywords = ["cli", "terminal", "ai", "agent", "devtools", "orchestration", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Terminals",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "rich>=13.0.0",
    "markdown-it-py>=3.0.0",
    "pygments>=2.16.0",
    "typer>=0.9.0",
    "pydantic>=2.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/KeatonZA1305/keaton-cli"
Repository = "https://github.com/KeatonZA1305/keaton-cli.git"
Issues = "https://github.com/KeatonZA1305/keaton-cli/issues"

[project.scripts]
keaton = "keaton.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["keaton*"]
